# KSRouter

./: .gitignore  AGENTS.md  Makefile  PROGRESS.md  PROJECT_PLAN-2.md  README.md
cluster/: k3d-config.yaml  versions.md
docs/: troubleshooting.md
evals/: canary_eval.py  chaos_test.py  coldstart_timing.py
models/: download.sh  llama-1b-scaledobject.yaml  llama-1b.yaml  manifest.yaml  qwen-0-5b-scaledobject.yaml  qwen-0_5b.yaml  qwen-3b-scaledobject.yaml  qwen-3b.yaml  sklearn-iris-smoke-test.yaml
observability/: grafana-configmap.yaml  podmonitor-llm-models.yaml  prometheusrules.yaml
observability/dashboards/: llm-serving.json
platform/cert-manager/: values.yaml
platform/keda/: triggerauthentication.yaml  values.yaml
platform/kserve/: clusterservingruntimes.yaml  values.yaml
platform/monitoring/: values.yaml
router/: Dockerfile  pyproject.toml  pytest.ini
router/manifests/: deployment.yaml  podmonitor.yaml
router/src/: logging_config.py  main.py  metrics.py  routing.py
router/tests/: integration_test.py  integration_test.sh  test_routing.py
runtime/: clusterservingruntime.yaml  servingruntime.yaml
scripts/: fix-dns.sh
