[project]
name = "router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "python-json-logger>=4.1.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
